--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="enter_your_name">Enter your name</string>
     <string name="save">save</string>
     <string name="cancel">Cancel</string>
+    <string name="logout">logout</string>
 </resources>
