--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="add_reminder">Add Reminder</string>ng>
     <string name="select_time">Select Time</string>
     <string name="select_date">Select Date</string>
+    <string name="reminder_icon">Reminder Icon</string>
 </resources>
