--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="select_time">Select Time</string>
     <string name="select_date">Select Date</string>
     <string name="reminder_icon">Reminder Icon</string>
+    <string name="delete">Delete</string>
 </resources>
